<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" alias="V"/>
        <import type="android.os.Build" alias="Build"/>
        <import type="android.text.TextUtils" alias="TU"/>

        <variable
            name="networkInfo"
            type="android.net.NetworkInfo"/>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="21dp"
            android:orientation="horizontal">
            <TextView
                style="@style/Text.ItemProperty.Value.SelectableGreen"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/bg_rect_frame"
                android:text="@string/state_available"
                app:selected="@{(networkInfo != null) ? networkInfo.isAvailable() : false}" />

            <TextView
                style="@style/Text.ItemProperty.Value.SelectableGreen"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:gravity="center"
                android:background="@drawable/bg_rect_frame"
                android:text="@string/state_connected"
                app:selected="@{(networkInfo != null) ? networkInfo.isConnected() : false}" />

            <TextView
                style="@style/Text.ItemProperty.Value.SelectableRed"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/bg_rect_frame"
                android:text="@string/state_failover"
                app:selected="@{(networkInfo != null) ? networkInfo.isFailover() : false}" />
        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1"
            android:shrinkColumns="1">
            <TableRow
                android:layout_marginTop="@dimen/item_content_margin" >
                <TextView
                    style="@style/Text.ItemProperty.Name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/property_network_type"/>

                <TextView
                    style="@style/Text.ItemProperty.Value.SelectableNeutral"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/item_content_margin"
                    android:text="@{(networkInfo != null) ? String.format(@string/type_subtype_template, networkInfo.typeName, networkInfo.type) : null}"/>
            </TableRow>
            <TableRow
                android:layout_marginTop="@dimen/item_content_margin">
                <TextView
                    style="@style/Text.ItemProperty.Name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/property_network_subtype"/>

                <TextView
                    style="@style/Text.ItemProperty.Value.SelectableNeutral"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/item_content_margin"
                    android:text="@{(networkInfo != null) ? String.format(@string/type_subtype_template, networkInfo.subtypeName, networkInfo.subtype) : null}"/>
            </TableRow>
            <TableRow
                android:layout_marginTop="@dimen/item_content_margin"
                android:visibility="@{((networkInfo == null) || TU.isEmpty(networkInfo.extraInfo)) ? V.GONE : V.VISIBLE}">
                <TextView
                    style="@style/Text.ItemProperty.Name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/property_network_extra_info"/>

                <TextView
                    style="@style/Text.ItemProperty.Value.SelectableNeutral"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/item_content_margin"
                    android:text="@{(networkInfo != null) ? networkInfo.extraInfo : null}"/>
            </TableRow>

            <TableRow
                android:layout_marginTop="@dimen/item_content_margin">
                <TextView
                    style="@style/Text.ItemProperty.Name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/property_network_status"/>

                <TextView
                    style="@style/Text.ItemProperty.Value.SelectableNeutral"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/item_content_margin"
                    android:text="@{(networkInfo != null) ? String.format(@string/status_template, networkInfo.state, networkInfo.detailedState) : null}"/>
            </TableRow>
        </TableLayout>

    </LinearLayout>
</layout>